templates/echo-poster-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-poster-api
  namespace: echo-poster
spec:
  selector:
    app: echo-poster-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
